--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,13 @@
-.box{
-    width: 100px;
-    height: 100px;
-    border-radius: 10%;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#root {
+    font-family: 'PingFangSC-Regular,Microsoft Yahei,Avenir,Helvetica,Arial,sans-serif';
+    font-size: 14px;
+    color: #333;
+    background: #f2f4f8;
 }
